invoices controller factura global por referencias added
