# routes/api.php
@@ -15,6 +15,8 @@ Route::resource('products', ProductsController::class);
 
 Route::get('invoices', [InvoicesController::class, 'index']);
 Route::get('invoices/{id}', [InvoicesController::class, 'show']);
+Route::post('invoices/global', [InvoicesController::class, 'createGlobalInvoice']);
+Route::post('invoices/global-by-reference', [InvoicesController::class, 'createGlobalInvoiceByReference']);
 
 // Product Routes
 // Route::prefix('products')->group(function () {
